--- a/main.html
+++ b/main.html
@@ -10,7 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <div class="main-container">
+        <div class="container-1">
+            <h1>Testimonials</h1>
+        </div>
 
+        <div class="container-2">
+            <p>This product is amazing! I highly reccomend it to anyone in need of solution like this.</p>
+            <i>- John Doe</i>
+        </div>
+
+        <div class="container-3">
+            <p>I have been using it for a few weeks now and it has completely transformed my workflow.</p>
+            <i>- Jane Smith</i>
+        </div>
+    </div>
 </body>
 
 </html>
